Update CarbonData README (#135)
* Update CarbonData README

* Update CarbonData README

remove UID and ACID feature.

* Update CarbonData README

* Update CarbonData README

* Update CarbonData README

* Update CarbonData README